--- a/package.json
+++ b/package.json
@@ -1,21 +1,23 @@
 {
-  "name": "project3",
+  "name": "project2",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "server": "node server"
   },
   "dependencies": {
     "@next-auth/mongodb-adapter": "^1.1.3",
     "aws-sdk": "^2.1509.0",
     "axios": "^1.6.2",
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongodb": "^4.17.2",
-    "next": "14.0.3",
+    "next": "^14.0.4",
     "next-auth": "^4.24.5",
     "react": "^18",
     "react-dom": "^18",
