--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "server": "node server"
+    "lint": "next lint"
   },
   "dependencies": {
     "@next-auth/mongodb-adapter": "^1.1.3",
