--- a/package.json
+++ b/package.json
@@ -14,14 +14,11 @@
     "axios": "^1.6.2",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
-    "express": "^4.18.2",
     "mongodb": "^4.17.2",
     "next": "^14.0.4",
     "next-auth": "^4.24.5",
     "react": "^18",
     "react-dom": "^18",
-    "sass": "^1.69.5",
-    "socket.io": "^4.7.2",
-    "socket.io-client": "^4.7.2"
+    "sass": "^1.69.5"
   }
 }
